[package]
name = "rs-obsidian-relate-documents"
version = "0.1.0"
edition = "2021"
description = "Compute `related-documents` Obsidian wiki-links for paper-report notes (hybrid IDF tag/author cosine + OpenAI embedding cosine with a B-veto)."

# Crate/package name keeps the `rs-` prefix; the installed command drops it.
[[bin]]
name = "obsidian-relate-documents"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
bincode = "1.3"
clap = { version = "4", features = ["derive"] }
rand = "0.8"
rand_chacha = "0.3"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "1"

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = 3
lto = true
